samples/_failures_safe/1761041926_3557ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69afc3aa.c: In function ‘main’:
./samples/SAFE/__tmp_69afc3aa.c:160:12: error: missing terminating " character
  160 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_69afc3aa.c:160:5: error: expected expression at end of input
  160 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_69afc3aa.c:160:5: error: expected declaration or statement at end of input
